# macwise

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DECISIONS.md  GOAL.md  GOAL_EVAL.md  GOAL_SIMPLE_UX.md  IMPLEMENT.md  IMPLEMENTATION_PACKET.md  LICENSE  LOOPHOLE_REVIEW.md  PROGRESS.md  RANKED_OPTIONS.md  README.md  RELEASE_CHECKLIST.md  REPO_MAP.md  REVIEW.md  RISK_NOTES.md  SECURITY.md  STANDARDS.md  TASK_QUEUE.md  TEST_PLAN.md  pyproject.toml
.github/workflows/: ci.yml  public-install-smoke.yml  release.yml
docs/: demo.md  getting-started.md  index.html  phase-1-acceptance.md  phase-2-acceptance.md  phase-3-acceptance.md  phase-4-acceptance.md  phase-5-acceptance.md  phase-6-acceptance.md  phase-7-acceptance.md  privacy.md  release-checklist.md  scorecard-evaluation.md  simple-ux-acceptance.md  threat-model.md
docs/assets/: macwise.css
docs/evaluation/: action-lab-protocol.md  canonical-replay-2026-07-20.md  clean-install-proof.md  human-pilot-protocol.md  privacy.md  private-live-aggregate-2026-07-20.md  real-mac-protocol.md  version-matrix.md
docs/plans/: 2026-07-17-phase-1-evidence-completeness.md  2026-07-17-phase-1-hostile-metadata.md  2026-07-17-phase-1-public-read-only-cli-design.md  2026-07-17-phase-1-public-read-only-cli.md  2026-07-17-phase-2-explain-review.md  2026-07-17-phase-3-overlap-intelligence-design.md  2026-07-17-phase-3-overlap-intelligence.md  2026-07-17-phase-4-cleanup-planning-design.md  2026-07-17-phase-4-cleanup-planning.md  2026-07-18-launch-documentation-design.md  2026-07-18-launch-documentation.md  2026-07-18-opportunity-usefulness-score-design.md  2026-07-18-opportunity-usefulness-score.md  2026-07-18-phase-5-reversible-cleanup-design.md  2026-07-18-phase-5-reversible-cleanup.md  2026-07-18-phase-6-codex-integration-design.md  2026-07-18-phase-6-codex-integration.md  2026-07-18-phase-7-public-release-design.md  2026-07-18-phase-7-public-release.md  2026-07-18-real-mac-ux-correction-design.md  2026-07-18-real-mac-ux-correction.md  2026-07-18-shared-knowledge-database-design.md  (+9 more)
evaluator/: README.md  pyproject.toml
evaluator/fixtures/privacy/: hostile-private-values.json
evaluator/fixtures/product_outputs/: audit-v4.json  checkup.json  execution-v1.json  plan-protected-v2.json  plan-v2.json
evaluator/fixtures/scenarios/: registry.json
evaluator/fixtures/synthetic/minimal/: manifest.json  oracle.json  reference.json
evaluator/policies/v1/: safety.toml
evaluator/scripts/: freeze_contract.py
evaluator/src/macwise_eval/: __init__.py  acceptance.py  action_lab.py  capture.py  claims.py  cli.py  decision_value.py  evaluate.py  io.py  metrics.py  models.py  mutations.py  oracle.py  policy.py  policy_detection.py  privacy.py  product_output.py  reporting.py  system.py  versioning.py
evaluator/src/macwise_eval/reference/: __init__.py  capture.py
evaluator/tests/: __init__.py  test_acceptance.py  test_action_lab.py  test_capture_cli.py  test_cli.py  test_decision_value.py  test_evaluate.py  test_independence.py  test_metamorphic.py  test_metrics.py  test_models.py  test_mutation_adequacy.py  test_policy.py  test_policy_detection.py  test_privacy.py  test_product_output.py  test_reporting.py  test_system.py  test_versioning.py
evaluator/tests/reference/: test_capture.py
scripts/: generate_eval_product_outputs.py  run_action_lab.py  verify_public_release.py
src/macwise/: cli.py  (+5 more)
tests/: conftest.py  test_catalog.py
(+145 files in other folders)
