[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macwise"
version = "0.1.0a0"
description = "Understand installed Mac software and plan safe, reversible cleanup."
requires-python = ">=3.12"
dependencies = [
  "platformdirs>=4",
  "pydantic>=2.7",
  "rich>=13",
  "typer>=0.12",
]

[project.scripts]
macwise = "macwise.cli:main"

[dependency-groups]
dev = [
  "pyright>=1.1",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/macwise"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
