[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macwise"
version = "1.0.0rc1"
description = "Understand installed Mac software and plan safe, reversible cleanup."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "MacWise contributors" }]
keywords = ["macos", "software-inventory", "homebrew", "cli", "codex"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "mcp>=1.27,<2",
  "platformdirs>=4",
  "pydantic>=2.7",
  "rich>=13",
  "typer>=0.12",
]

[project.urls]
Repository = "https://github.com/deesatzed/macwise"
Issues = "https://github.com/deesatzed/macwise/issues"
Security = "https://github.com/deesatzed/macwise/security/policy"

[project.scripts]
macwise = "macwise.cli:main"

[dependency-groups]
dev = [
  "pyright>=1.1",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/macwise"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
