[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macwise-eval"
version = "0.1.0.dev0"
description = "Independent evidence and safety evaluator for serialized MacWise outputs."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
  "pydantic>=2.7",
  "typer>=0.12",
]

[project.scripts]
macwise-eval = "macwise_eval.cli:main"

[dependency-groups]
dev = [
  "pyright>=1.1",
  "pytest>=8",
  "ruff>=0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/macwise_eval"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
